k8s/apps/clipboard/clipboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clipboard
  labels:
    app: clipboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clipboard
  template:
    metadata:
      labels:
        app: clipboard
    spec:
      containers:
        - name: clipboard
          image: git.xgabrielmorales.com/xgabrielmorales/clipboard:0.0.2@sha256:c035a29f4ba8ae65ff9faeb4e78995d2e16016ed83ec886945bdcef0862baa9f
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 32Mi
            limits:
              memory: 64Mi
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
