k8s/apps/clipboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clipboard
spec:
  selector:
    app: clipboard
  ports:
    - port: 3000
      targetPort: 3000
