k8s/apps/clipboard/clipboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clipboard
spec:
  ingressClassName: traefik
  rules:
    - host: clipboard.xgabrielmorales.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clipboard
                port:
                  number: 3000
